# codea-agent-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml
codea/: cli.py  config.py  mcp_client.py
codea/tests/: test_cli.py  test_deps.py  test_files.py  test_runtime.py
scripts/codea/: cli.py  discover.py  mcp_client.py
scripts/codea/tests/: conftest.py  test_cli.py  test_collections.py  test_files.py  test_new_commands.py  test_pause_resume.py  test_projects.py  test_runtime.py  test_templates.py
