[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codea-skill"
version = "0.1.0"
description = "CLI tool and AI agent skill for Codea"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "zeroconf>=0.38",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
codea = "codea.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["codea"]
